vlib/v/parser/tests/struct_field_expected.out
vlib/v/parser/tests/struct_field_expected.vv:6:2: error: unexpected `.`, expecting struct field name
    4 | 
    5 | x = {
    6 |     .a : 'Alpha'
      |     ^
    7 |     .b : 'Beta'
    8 | }
