vlib/v/parser/tests/struct_field_expected.vv
enum TestEnum {
	a b
}

x = Bar{
	.a: 'Alpha'
	.b: 'Beta'
}

